<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="viewModel"
            type="com.example.confirmedchallenge.review.ReviewViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/product_review_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        tools:context=".review.ReviewFragment">

        <ImageView
            android:id="@+id/product_review_image"
            android:layout_width="0dp"
            android:layout_height="266dp"
            android:scaleType="centerCrop"
            app:imageUrl="@{viewModel.selectedProduct.imgUrl}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/backgrounds/scenic"/>

        <TextView
            android:id="@+id/tv_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/product_review_image"
            android:layout_marginTop="16dp"
            android:text="@string/add_rating"
            android:textSize="25sp"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/et_add_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/_1_to_5"
            android:textSize="25sp"
            android:text="@{viewModel.review.rating}"
            android:layout_marginTop="16dp"
            android:padding="6dp"
            android:inputType="number"
            android:digits="1,2,3,4,5"
            app:layout_constraintStart_toEndOf="@id/tv_rating"
            app:layout_constraintTop_toBottomOf="@id/product_review_image"
            android:layout_marginStart="8dp"/>

        <EditText
            android:id="@+id/et_add_text_review"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            app:layout_constraintTop_toBottomOf="@id/et_add_rating"
            android:layout_marginTop="16dp"
            android:hint="@string/insert_your_review"
            android:inputType="text"
            android:text="@{viewModel.review.text}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:maxLength="30"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:onClick="@{() -> viewModel.addNewReview()}"
            android:backgroundTint="@color/teal_200"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_add_text_review"
            android:layout_marginTop="16dp"/>

        <ImageView
            android:id="@+id/status_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:reviewApiStatus="@{viewModel.status}"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>